Responsive layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 *{
     font-family: monospace;
     background-color: transparent;
+
     
 }
 body{
@@ -8,15 +9,15 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%
-}
-.body{
+    height: 100%;
     background-image: url(wild-nature-7680x4320.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: normal;
     background-position: center;
     background-attachment: fixed;
+}
+.body{
     width: 100%;
     height: 100%;
 
